--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ html, body, #root {
   margin: 0;
   height: 100%;
   font-family: 'Open Sans', sans-serif;
+  background-color: #3E3E3E;
 }
 
 body, h1, h2, h3 {
@@ -83,4 +84,10 @@ md-sidenav{
 
 .mar {
   margin-top: 70px
+}
+
+md-card{
+  width: 260px;
+  height: 120px;
+  background: linear-gradient(to left, #518092 , #1B4E62);
 }
